--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
-    <title>training and placement </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<>, initial-scale=1.0" />
+    <title>training and placement</title>
+  </head>
+  <body>
     <footer>
-        <div class = "footer">
-            <p>
-
-            </p>
-        </div>
+      <div class="footer">
+        <pre>
+    Made by-  &#8226; Shivanshu dobhal&#8226; Shivam mahajan&#8226; Shreyash negi&#8226; Shreya mittal&#8226; Shivansh juneja&#8226; Shivansh garg&#8226; Shivansh singla&#8226; Shivam sharma&#8226; Siddharth vardhan singh&#8226; Shobhit gulati
+              
+            </pre
+        >
+      </div>
     </footer>
-</body>
+  </body>
 </html>
