--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<>, initial-scale=1.0" />
     <title>training and placement</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Footer -->
     <footer>
       <div class="footer">
-        <pre>
-    Made by-  &#8226; Shivanshu dobhal&#8226; Shivam mahajan&#8226; Shreyash negi&#8226; Shreya mittal&#8226; Shivansh juneja&#8226; Shivansh garg&#8226; Shivansh singla&#8226; Shivam sharma&#8226; Siddharth vardhan singh&#8226; Shobhit gulati
+        <hr class="footer_rule">
+        <p class="footer_content">
+          Made by - &nbsp; &#8226; Shivanshu dobhal &nbsp; &#8226; Shivam mahajan&nbsp;  &#8226; Shreyash negi&nbsp;  &#8226; Shreya mittal&nbsp; &#8226; Shivansh juneja&nbsp; &#8226; Shivansh garg&nbsp; &#8226; Shivansh singla&nbsp; &#8226; Shivam sharma&nbsp; &#8226; Siddharth vardhan singh&nbsp; &#8226; Shobhit gulati
               
-            </pre
-        >
+        </p>
+        <hr class="footer_links">
+        <p class="footer_content2"><a href="#" class = "contact">Contact Us</a></p>
       </div>
     </footer>
   </body>
