--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,29 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>homepage</title>
 </head>
-
 <body>
-
+    <!--this is header-->
+    <header><h1><b>TRAINING AND PLACEMENT CELL</b></h1>
+    <h4>UIET, PANJAB UNIVERSITY, CHANDIGARH.</h4></header>
+    <hr size="40">
+    <!--navigation-->
+    <nav>
+        <a href="#">HOME</a>
+        <a href="#">LINK 1</a>
+        <a href="#">LINK 2</a>
+        <a href="#">LINK 3</a>
+        <a href="#">LINK 4</a>
+        <a href="#">LINK 5</a>
+        <a href="#">ABOUT US</a>
+      </nav>
+      <hr>
+      <p><b>what is training and placement?</b></p>
+      <br>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione dolorum, libero dolores facere suscipit, consequuntur officia nostrum porro tempore, inventore voluptatum illum explicabo eius fuga animi iusto commodi! Similique illum impedit temporibus tenetur consequuntur dolorum harum quia placeat necessitatibus voluptatum tempore accusamus assumenda eligendi non possimus voluptate quidem beatae, eum soluta voluptatibus facilis maxime? Ullam, consequatur animi fugiat molestias aut qui fuga repellendus. Non, explicabo vero. Distinctio pariatur perferendis officia, quos illo doloremque quidem. Ipsam sed eveniet totam animi unde quaerat placeat adipisci deleniti, cupiditate ad sunt! Eligendi qui obcaecati rerum impedit exercitationem aut culpa quasi asperiores, expedita autem laborum nostrum corporis necessitatibus, iste aspernatur at. Architecto aliquam dolorum iusto? Numquam dolorum non reprehenderit quis veritatis tempore perferendis nostrum delectus voluptates at voluptas vitae corrupti hic, qui optio laudantium perspiciatis nulla fugiat quas, ex velit soluta fuga. Accusantium veritatis nobis a impedit natus quibusdam laboriosam, ullam doloribus dolorum iure praesentium perferendis debitis autem nesciunt, quasi reiciendis fugiat ab veniam ut accusamus. Eum numquam atque error dolor eaque deserunt doloribus quo omnis odit, delectus soluta, dolorum quasi voluptates ea esse. Quod dignissimos iste tempore corrupti architecto natus quasi ex dolorem eveniet id quos, incidunt magni iusto ut delectus maxime quam harum.</p>
 </body>
 </html>
