img folder updated

--- a/Index.html
+++ b/Index.html
@@ -62,11 +62,12 @@
       </p>
     </div>
     <br />
+
     <!--Description-->
-    <hr />
+    <hr>
     <br>
-    <div class="Pec">
-      <img src="pec.png" alt="error loading image" />
+    <div class="PEC">
+      <img src="Assets/College_Logos/pec.png" alt="error loading image" />
      <h2>PEC</h2>
      <br>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
@@ -79,7 +80,7 @@
     <hr>
     <br>
     <div class="UIET">
-      <img src="uiet.png" alt="error loading image" />
+      <img src="Assets/College_Logos/uiet.png" alt="error loading image" />
       <h2>UIET</h2>
       <br>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate enim
@@ -92,7 +93,7 @@
     <hr>
     <br>
     <div class="CCET">
-      <img src="ccet.png" alt="error loading image" />
+      <img src="Assets/College_Logos/ccet.png" alt="error loading image" />
       <h2>CCET</h2>
       <br>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil
@@ -106,7 +107,7 @@
     <hr>
     <br>
     <div class="chitkara">
-      <img src="chitakra.png" alt="erro loading image" />
+      <img src="Assets/College_Logos/chitakra.png" alt="erro loading image" />
       <h2>Chitkara university</h2>
       <br>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eos placeat
@@ -119,7 +120,7 @@
     <hr>
     <br>
     <div class="CU">
-      <img src="cu.png" alt="error loading image" />
+      <img src="Assets/College_Logos/cu.png" alt="error loading image" />
       <h2>Chandigarh university</h2>
       <br>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, voluptatum
