--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
     <hr>
     <br>
     <div class="PEC">
-      <img src="Assets/College_Logos/pec.png" alt="error loading image" />
+      <a href=""> <img src="Assets/College_Logos/pec.png" alt="error loading image" /></a>
      <h2>PEC</h2>
      <br>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
@@ -75,12 +75,12 @@
       dolore temporibus nobis expedita repellendus saepe ea perspiciatis!
       Pariatur error iusto ratione rerum! Quia illum eum blanditiis sapiente in
       at sunt ab mollitia temporibus, totam atque, enim ut cumque autem optio.
-    </div>
-    <br>
-    <hr>
-    <br>
-    <div class="UIET">
-      <img src="Assets/College_Logos/uiet.png" alt="error loading image" />
+      <br>
+      <a href="">Read more</a>
+      <hr>
+     </div>
+      <div class="UIET">
+      <a href=""> <img src="Assets/College_Logos/uiet.png" alt="error loading image" ></a>
       <h2>UIET</h2>
       <br>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate enim
@@ -88,12 +88,14 @@
       beatae nihil minus nostrum in est, optio nulla debitis cum unde quasi!
       Facere voluptate unde delectus provident. Repudiandae adipisci nobis
       deleniti eius. Eligendi mollitia, ipsum sit animi ea amet.
+      <br>
+      <a href="">Read more</a>
     </div>
     <br>   
     <hr>
     <br>
     <div class="CCET">
-      <img src="Assets/College_Logos/ccet.png" alt="error loading image" />
+      <a href=""> <img src="Assets/College_Logos/ccet.png" alt="error loading image" /></a>
       <h2>CCET</h2>
       <br>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil
@@ -102,12 +104,14 @@
       perspiciatis, dolorem esse quibusdam et dolorum voluptatum eveniet
       laborum! Nisi, expedita atque officiis perspiciatis tenetur illo, earum
       natus architecto officia vero vitae?
+      <br>
+      <a href="">Read more</a>
     </div>
     <br>
     <hr>
     <br>
     <div class="chitkara">
-      <img src="Assets/College_Logos/chitakra.png" alt="erro loading image" />
+     <a href=""> <img src="Assets/College_Logos/chitakra.png" alt="erro loading image" /></a>
       <h2>Chitkara university</h2>
       <br>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eos placeat
@@ -115,12 +119,13 @@
       optio veritatis dicta deserunt rerum rem laborum debitis atque. Neque est
       dolorum amet animi, odit reprehenderit officia delectus ipsum beatae quasi
       numquam rerum eum laborum, molestias eos accusantium qui.
+      <a href="">Read more</a>
     </div>
     <br>
     <hr>
     <br>
     <div class="CU">
-      <img src="Assets/College_Logos/cu.png" alt="error loading image" />
+      <a href=""><img src="Assets/College_Logos/cu.png" alt="error loading image" /></a>
       <h2>Chandigarh university</h2>
       <br>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, voluptatum
@@ -129,6 +134,7 @@
       optio alias eveniet! Incidunt quisquam distinctio similique? Esse, non
       necessitatibus harum dolor, dolore nesciunt odio nulla a est iusto
       voluptate!
+      <a href="">Read more</a>
     </div>
     <!-- Footer -->
     <footer>
