--- a/Chitkara/index.html
+++ b/Chitkara/index.html
@@ -1,1 +1,57 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>homepage</title>
+  </head>
+  <body>
+    <!--this is header-->
+    <header>
+      <div class="header">
+        <img
+          src="/Assets/WhatsApp Image 2021-08-03 at 2.00.32 PM.jpeg"
+          alt=""
+          class="logo"
+        />
+        <h1><b> TRAINING AND PLACEMENT CELL</b></h1>
+        <br />
+        <h4>UIET, PANJAB UNIVERSITY, CHANDIGARH.</h4>
+      </div>
+    </header>
+
+    <!--navigation-->
+    <div class="navbar">
+      <a href="#">HOME </a>
+      <a href="#">PEC</a>
+      <a href="#">UIET</a>
+      <a href="#">CCET</a>
+      <a href="#">CHITKARA</a>
+      <a href="#">CU</a>
+      <a href="#">ABOUT US</a>
+    </div>
+    
+    
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer">
+        <hr class="footer_rule" />
+        <p class="footer_content">
+          Made by - &nbsp; &#8226; Shivanshu Dobhal &nbsp; &#8226; Shivam
+          Mahajan&nbsp; &#8226; Shreyash Negi&nbsp; &#8226; Shreya Mittal&nbsp;
+          &#8226; Shivansh Juneja&nbsp; &#8226; Shivansh Garg&nbsp; &#8226;
+          Shivansh Singla&nbsp; &#8226; Shivam Sharma&nbsp; &#8226; Siddharth
+          Vardhan Singh&nbsp; &#8226; Shobhit Gulati
+        </p>
+        <hr class="footer_links" />
+        <p class="footer_content2">
+          <a href="#" class="contact">Contact Us</a>
+        </p>
+      </div>
+    </footer>
+  </body>
+</html>
