--- a/PEC/index.html
+++ b/PEC/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>PEC</title>
+    <title>homepage</title>
   </head>
   <body>
     <!--this is header-->
@@ -21,7 +22,20 @@
         <h4>UIET, PANJAB UNIVERSITY, CHANDIGARH.</h4>
       </div>
     </header>
+
+    <!--navigation-->
+    <div class="navbar">
+      <a href="#">HOME </a>
+      <a href="#">PEC</a>
+      <a href="#">UIET</a>
+      <a href="#">CCET</a>
+      <a href="#">CHITKARA</a>
+      <a href="#">CU</a>
+      <a href="#">ABOUT US</a>
+    </div>
     
+    
+
     <!-- Footer -->
     <footer>
       <div class="footer">
