--- a/CCET/index.html
+++ b/CCET/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="header">
         <img
-          src="/Assets/WhatsApp Image 2021-08-03 at 2.00.32 PM.jpeg"
+          src="../Assets/WhatsApp Image 2021-08-03 at 2.00.32 PM.jpeg"
           alt=""
           class="logo"
         />
