logo destination changed

--- a/CCET/index.html
+++ b/CCET/index.html
@@ -107,7 +107,7 @@
     <br>
     
     <div class ="div_img">
-      <img src = "file:///C:/Users/Garg/Desktop/college/ccet%20logo.png" width = "200",height = "200"/> 
+      <img src = "C:\Users\Garg\Documents\GitHub\Training-and-placement-management\CCET\ccet logo.png" width = "200",height = "200"/> 
     </div>
 
     <div class = "div_info"><font size="5">
