--- a/CCET/index.html
+++ b/CCET/index.html
@@ -34,13 +34,14 @@
         float:left;
         text-align: left;
         border-radius: 25px;
+        width: 13.0%;
       }
       .div_info{
         float:left;
         text-align: left;
         border-radius: 30px;
         height:200px;
-        width:800px;
+        width:52%;
         background: cornsilk;
         border: 5px outset greenyellow;
         animation-name: change_color;
@@ -54,7 +55,7 @@
         border-radius: 20px;
         border: 5px outset red;
         height: 200px;
-        width: 250px;
+        width: 15.23%;
         animation-name: change_color_left;
         animation-duration: 8s;
         animation-iteration-count: infinite;
@@ -70,7 +71,7 @@
         border-radius: 20px;
         border: 5px outset rgb(255, 187, 0);
         height: 200px;
-        width: 255px; 
+        width: 17.8%; 
         animation-name: change_color_right; 
         animation-duration: 8s; 
         animation-iteration-count: infinite; 
