--- a/CCET/index.html
+++ b/CCET/index.html
@@ -45,7 +45,8 @@
         background: cornsilk;
         border: 5px outset greenyellow;
         animation-name: change_color;
-        animation-duration: 8s;
+        animation-direction: alternate;
+        animation-duration: 6s;
         animation-iteration-count: infinite;
 
       }
@@ -57,7 +58,8 @@
         height: 200px;
         width: 15.24%;
         animation-name: change_color_left;
-        animation-duration: 8s;
+        animation-duration: 6s;
+        animation-direction: alternate;
         animation-iteration-count: infinite;
       }
       .div_center{
@@ -73,7 +75,8 @@
         height: 200px;
         width: 17.8%; 
         animation-name: change_color_right; 
-        animation-duration: 8s; 
+        animation-direction: alternate;
+        animation-duration: 6s; 
         animation-iteration-count: infinite; 
     </style>
   </head>
@@ -143,6 +146,9 @@
       </p>
       </div>
       <br>
+      <h2><center><i>Placement Stats of 2020</i></center></h2>
+      <br>
+      
 
 
       <!--code of table here-->
