--- a/PEC/index.html
+++ b/PEC/index.html
@@ -44,7 +44,7 @@ Here are some of the companies that wisited last year for placement.
       </section>
   </div>
   <div class="panel-heading">students placed in the last three years</div>
-  <table class="table1" border="1" style=none;>
+  <table class="table1" border="1" ;>
      <tbody>
      <tr height="42">
      <td height="42" style="height:42px;width:88px;"><strong>Year</strong></td>
