--- a/PEC/index.html
+++ b/PEC/index.html
@@ -44,6 +44,8 @@ Here are some of the companies that wisited last year for placement.
       </section>
   </div>
   <div class="panel-heading">students placed in the last three years</div>
+  <div class="ftable1">
+    
   <table class="table1" border="1" ;>
      <tbody>
      <tr height="42">
@@ -181,8 +183,9 @@ Here are some of the companies that wisited last year for placement.
      <td><a href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202017-18_Web.pdf" target="_blank">2017- 2018 Placed Students</a></td>
      </tr>
      </tbody>
-     </table>
+     </table></div>
      <div class="heading2">CTC of the last four years </div>
+     <div class="ftable2">
      <table class="table2" border="1" cellpadding="0" cellspacing="0" style="width:413px;" width="413">
          <tbody>
          <tr>
@@ -257,8 +260,10 @@ Here are some of the companies that wisited last year for placement.
          </tr>
          </tbody>
          </table>
+         </div>
          <div class="panel panel-default">
              <div class="panel-heading">No. of PPOs Received in Last 04 Years</div>
+             <div class="ftable3">
              <table class="table3" border="1" cellpadding="0" cellspacing="0" style="width:307px;" width="307">
              <tbody>
              <tr>
@@ -301,26 +306,27 @@ Here are some of the companies that wisited last year for placement.
              <p align="center"><strong>83</strong></p>
              </td>
              </tr>
-             </tbody></table><br><br><hr>
+             </tbody></table>
+             </div>
+             <br><br><hr>
              <div class="past">
-                <h2> Some of our previous recruiters are:-</h2> <br>
+                <h2 style=color:crimson style=font-style:italic > Some of our previous recruiters are:-</h2> <br>
                  <pre>
-ABB   |GEMINI   |NAVYUG   |ABSOLUT DATA   |GMR   |NBC BEARING   |ACC   |GODREJ   |NITCO   |ACCENTURE   |GOLDMAN SACHS   |NOMURA   |ACCOLITE  |GOOGLE   |NUCLEAR SOFTWARE   |ADA/DRDO   |GRAIL RESEARCH   |OPEN SOLUTION   |ADOBE   |GREY B   |ORIENT   |AKASH INSTIUTE   |GWYNNIEBEE PANASONIC   |ALSTOM PROJECTS   |HAL   |PHILIPS   |AMADEUS   |HATCH   |POWER GRID`   |AMAZON   |HAVELLS INDIA   |PRATAP UNIVERSITY   |AMERICAN EXPRESS   |HCL INFOSYSTEMS   |PUNJLLOYD   |AMTEK   |HCL TECH   |QA INFOTECH   |ANSAL API   |HEADS STRONG   |
-RANCORE (RELIANCE INDUSTRIES LTD)   |ARICENT   |HERO HONDA   |RECKITT BENCKISER   |ARISTA NETWORK   |HERO MOTOCORP LTD.   |ROYAL ENFIELD   |ASCENT MEDIA PTE LTD, SINGAPORE   |HINDUSTAN AERONAUTICS LTD (HAL)   |S&P   |ASHOK LEYLAND   |HMEL   |SAB MILLER   |ATKINS   |
-HONDA MOTORCYCLE & SCOOTER LTD   |SAFRAN   |ATLAS COPCO   |HONDA MOTORCYCLE & SCOOTER LTD (R&D DIVN)   |SAMSUNG CONST. ENGINEERING   |
-ATRENTA   |HONDA SIEL   |SAMSUNG ENGINEERING LAB   |BAHRA UNIVERSITY   |HP INDIA   |SAMSUNG HEAVY INDUSTRIES   |BANK OF AMERICA   |
-HYUNDAI   |SAMSUNG INDIA ELECTRONICS PVT LTD   |BECHTEL INDIA   |IBM INDIA PVT LTD   |SAMSUNG RESEARCH LAB   |BHARAT ELECTRONICS LTD.   |
-IDEA CELLULAR   |SANDISK   |BHARAT PETROLEUM CORPORATION LTD   |IDS INFOTECH   SANKLAP SEMI CONDUCTOR   |BHEL   |INDIA BULLS   |SAP LAB   |
-BHUSHAN STEEL   |INDIA YAMAHA MOTORS PVT LTD   |SAPIENT   |BL KASHYAP   |INDIAN NAVY   |SCHNEIDER ELECTRIC   |BLUE STAR   |
-INDUS INTERNATIONAL UNVIERSITY, UNA (HP)   |SHAPOORJI   |BOCI   |INDUS VALLEY   |SHARDA UNIVERSITY   |BOMBADIAR   |INFOSYS   |SHOP CLUES   |BROADCOM   |INTERRA SYSTEM   |SIEMENS LTD   |CADENCE   IOCL   |SIMPLEX INFRASTRUCTURE   |CATERPILLAR   ISGEC   |SMART CUBE   |C-DOT   |
-ITC   |SNAPDEAL   |CENTURY LINK   |IVP   |SOCIAL APP HQ   |CGC, LANDRAN   \+JINDAL CONST.   |SOFTWARE AG   |CISCO   |JOHN DEERE   |SPML INFRA LIMITED   |CLICK LABS   |JSL STAINLESS LTD   |STEEL STRIPS   |COMPRO TECH   |JSPL   |ST-ERICSSON   |COMVIVA   |JSW   |STRYKER   |
-CURATION THE   |KPMG   |FACTOR   |CVENT   |KRITIKAL SOLUTION   |TATA CONSUTLANCY SERVICES (TCS)   |CYPRESS   |L&T (ECC DIVN.)   |
-TATA MOTORS   |D.E.SHAW   |L&T (POWAI)   |TATA POWER DELHI DISTRIBUTION LTD   |DABUR   |LAFARGE   |TAVANT   |DELOITTE   |LAKSHAYA   |
-TCIL   |DIRECTI   |LAXMI PRECISION SCREW   |TCS   |DRDO   |LG ELECTRONICS   |TECHNIP   |E.CONSTRUCT   |LNJ BHILWARA GROUP   |TEXAS INSTRUMENTS   |EDIFECS   |LOVELY PROFESSIONAL INSTITUTE   |THOROGOOD   |EMAAR MGF   |MAHARISHI MARKANDESHWAR UNIVERSITY, MULLANA   |
-TRIDENT   |EMERSON   |MAHINDRA & MAHINDRA   |TT CONSULTANT   |ENGINEERS INDIA LTD   |MARUTI   |USHA INTERNATIONAL   |ERICSSON   |MARUTI SUZUKI INDIA LTD   |UTRADE   |EVALUE SERVE   |MEC INTELLIGENCE   |VARDHMAN STEEL   |EXICOM   |MEWAR UNIVERSITY   |VOLVO EICHER   |
-EXL (INDUCTIS   |MICROSOFT   |WAPCOS   |FISERV   |MOTHERSON SUMI INFOTECH & DESIGN   |WHIRLPOOL   |FREESCALE   |MURUGAPPA   |WINSHUTTLE   |
-FUTURES FIRST   |MUSIGMA   |YAHOO   |GAMMON INDIA   |MYSIS   |YASHI CONSULTANCY   |GE AVIATION   |NAGAROO SOFTWARE   |Z SCALER   |
-GE ELECTRICAL   |NATIONAL INSTR.   |ZOMATO   |GEIPER   |NAUKRI.COM   |ZS ASSOCIATES
+  ABB   |GEMINI   |NAVYUG   |ABSOLUT DATA   |GMR   |NBC BEARING   |ACC   |GODREJ   |NITCO   |ACCENTURE   |GOLDMAN SACHS   |NOMURA   |ACCOLITE <br> |GOOGLE   |NUCLEAR SOFTWARE   |ADA/DRDO   |GRAIL RESEARCH   | <br> OPEN SOLUTION   |ADOBE   |GREY B   |ORIENT   |AKASH INSTIUTE   |GWYNNIEBEE PANASONIC   |ALSTOM PROJECTS   |HAL   |PHILIPS   |AMADEUS   |HATCH   |POWER GRID`  <br> |AMAZON   |HAVELLS INDIA   |PRATAP UNIVERSITY  <br> |AMERICAN EXPRESS   |HCL INFOSYSTEMS   |PUNJLLOYD   |AMTEK   |HCL TECH   |QA INFOTECH   |ANSAL API   |HEADS STRONG   |
+   RANCORE (RELIANCE INDUSTRIES LTD)   |ARICENT   |HERO HONDA   |RECKITT BENCKISER   |ARISTA NETWORK   |HERO MOTOCORP LTD.   |ROYAL ENFIELD   | <br> ASCENT MEDIA PTE LTD, SINGAPORE   |HINDUSTAN AERONAUTICS LTD (HAL) <br>  |S&P   |ASHOK LEYLAND   |HMEL   |SAB MILLER   |ATKINS   |
+   HONDA MOTORCYCLE & SCOOTER LTD   |SAFRAN   |ATLAS COPCO   |HONDA MOTORCYCLE & SCOOTER LTD (R&D DIVN)   |SAMSUNG CONST. ENGINEERING   |
+    ATRENTA   |HONDA SIEL   |SAMSUNG ENGINEERING LAB   |BAHRA UNIVERSITY  |HP INDIA   |SAMSUNG HEAVY INDUSTRIES   |BANK OF AMERICA   |
+  HYUNDAI   |SAMSUNG INDIA ELECTRONICS PVT LTD   |BECHTEL INDIA   |IBM INDIA PVT LTD   |SAMSUNG RESEARCH LAB   |BHARAT ELECTRONICS LTD.   |
+   IDEA CELLULAR   |SANDISK   |BHARAT PETROLEUM CORPORATION LTD   |IDS INFOTECH   SANKLAP SEMI CONDUCTOR   |BHEL   |INDIA BULLS   |SAP LAB   |
+ BHUSHAN STEEL   |INDIA YAMAHA MOTORS PVT LTD   |SAPIENT   |BL KASHYAP   |INDIAN NAVY   |SCHNEIDER ELECTRIC   |BLUE STAR   |
+ INDUS INTERNATIONAL UNVIERSITY, UNA (HP)   |SHAPOORJI   |BOCI   |INDUS VALLEY   |SHARDA UNIVERSITY   |BOMBADIAR   |INFOSYS   |SHOP CLUES   |BROADCOM  <br> |INTERRA SYSTEM   |SIEMENS LTD   |CADENCE   IOCL  <br> |SIMPLEX INFRASTRUCTURE   |CATERPILLAR   ISGEC   |SMART CUBE   |C-DOT   |
+  ITC   |SNAPDEAL   |CENTURY LINK   |IVP   |SOCIAL APP HQ   |CGC, LANDRAN   \+JINDAL CONST.   |SOFTWARE AG   |CISCO   |JOHN DEERE   |SPML INFRA LIMITED   |CLICK LABS <br>  |JSL STAINLESS LTD   | <br> STEEL STRIPS   |COMPRO TECH   |JSPL   |ST-ERICSSON   |COMVIVA   |JSW   |STRYKER   |
+  CURATION THE   |KPMG   |FACTOR   |CVENT   |KRITIKAL SOLUTION   |TATA CONSUTLANCY SERVICES (TCS)   |CYPRESS   |L&T (ECC DIVN.)   |
+ TATA MOTORS   |D.E.SHAW   |L&T (POWAI)   |TATA POWER DELHI DISTRIBUTION LTD   |DABUR   |LAFARGE   |TAVANT   |DELOITTE   |LAKSHAYA   |
+   TCIL   |DIRECTI   |LAXMI PRECISION SCREW   |TCS   |DRDO   |LG ELECTRONICS   |TECHNIP   |E.CONSTRUCT   |LNJ BHILWARA GROUP   |TEXAS INSTRUMENTS   |EDIFECS <br>  |LOVELY PROFESSIONAL INSTITUTE  <br> |THOROGOOD   |EMAAR MGF   |MAHARISHI MARKANDESHWAR UNIVERSITY, MULLANA   |   TRIDENT   |EMERSON   |MAHINDRA & MAHINDRA   |TT CONSULTANT <br>  |ENGINEERS INDIA LTD   |MARUTI   |USHA INTERNATIONAL  <br> |ERICSSON   |MARUTI SUZUKI INDIA LTD   |UTRADE   |EVALUE SERVE   |MEC INTELLIGENCE  <br> |VARDHMAN STEEL   |EXICOM   |MEWAR UNIVERSITY   |VOLVO EICHER   |
+  EXL (INDUCTIS   |MICROSOFT   |WAPCOS   |FISERV   |MOTHERSON SUMI INFOTECH & DESIGN   |WHIRLPOOL   |FREESCALE   |MURUGAPPA   |WINSHUTTLE   |
+   FUTURES FIRST   |MUSIGMA   |YAHOO   |GAMMON INDIA   |MYSIS   |YASHI CONSULTANCY   |GE AVIATION   |NAGAROO SOFTWARE   |Z SCALER   |
+  GE ELECTRICAL   |NATIONAL INSTR.   |ZOMATO   |GEIPER   |NAUKRI.COM   |ZS ASSOCIATES
                  </pre>
              </div>
     
