--- a/CCET/index.html
+++ b/CCET/index.html
@@ -15,7 +15,7 @@
       @keyframes text_slide{
         from {
        margin-left: 100%;
-       width: 100%;
+       width: 300%;
        }
        to {
          margin-left: 0%;
@@ -74,7 +74,15 @@
         animation-name: change_color_right; 
         animation-direction: alternate;
         animation-duration: 6s; 
-        animation-iteration-count: infinite; 
+        animation-iteration-count: infinite;
+      }
+
+      .div_facility{
+
+        float: left;
+        border: 5 px outset red;
+      }
+
     </style>
   </head>
   <body>
@@ -202,8 +210,8 @@
   </tbody>
 </table>
 </div>
-   <br>
-    <br>
+<br>
+    
     <footer>
       <div class="footer">
         <hr class="footer_rule" />
