--- a/Chitkara/index.html
+++ b/Chitkara/index.html
@@ -34,6 +34,8 @@
       <a href="#">ABOUT US</a>
     </div>
     <!--content-->
+    <img src="chitkara-pic.jpg" class="chitkara">
+
     <div class="content">
       Since Inception, Chitkara University Has A Path Breaking Recruitment
       Record For Graduates From Various Academic Programs. We offer our students
@@ -43,14 +45,15 @@
       studies and offers numerous networking opportunities with company
       representatives and alumni.
     </div>
+    
+    <img src="companies_visiting.png" alt="photo" class="placement">
 
-    <img src="chitkara-pic.jpg">
 
     <table>
 
       <tbody>
         <tr>
-<strong>
+
           <td> Number of recruiters </td>
           <td>550+</td>
 
@@ -88,7 +91,6 @@
           <tr>
             <td>Number of Startups</td>
             <td>100+</td>
-          </strong>
           </tr>
           </tbody>
           </table>
@@ -98,7 +100,7 @@
     </table>
 
     <!--reviews-->
-    <div class="reviews"
+    <div class="reviews">
     <p><strong>REVIEWS</strong></p>
 
     <img src="chitkara-reviews.png" alt="no image found">
@@ -111,11 +113,8 @@
       <div class="footer">
         <hr class="footer_rule" />
         <p class="footer_content">
-          Made by - &nbsp; &#8226; Shivanshu Dobhal &nbsp; &#8226; Shivam
-          Mahajan&nbsp; &#8226; Shreyash Negi&nbsp; &#8226; Shreya Mittal&nbsp;
-          &#8226; Shivansh Juneja&nbsp; &#8226; Shivansh Garg&nbsp; &#8226;
-          Shivansh Singla&nbsp; &#8226; Shivam Sharma&nbsp; &#8226; Siddharth
-          Vardhan Singh&nbsp; &#8226; Shobhit Gulati
+          Made by -&nbsp; &#8226; Shivam
+          Mahajan&nbsp; &#8226; Shivam Sharma
         </p>
         <hr class="footer_links" />
         <p class="footer_content2">
