--- a/Chitkara/index.html
+++ b/Chitkara/index.html
@@ -103,7 +103,7 @@
     <div class="reviews">
     <p><strong>REVIEWS</strong></p>
 
-    <img src="chitkara-reviews.png" alt="no image found">
+    <img src="Screenshot_382.png" alt="no image found">
     </div>
 
 
