--- a/CCET/index.html
+++ b/CCET/index.html
@@ -83,9 +83,23 @@
         border: 5 px outset red;
       }
       .recruiters{
-                  padding-top: 50%;
+                  padding-top: 43%;
                   resize: 30%;
                   }
+      .div_first{
+        float:left;
+        border:5px outset red;
+        height:400px;
+        width:350px;
+        background-color: aliceblue;
+      }
+      .div_second{
+        float:left;
+        border:5px outset rgb(251, 255, 0);
+        height:400px;
+        width:389px;
+        background-color: rgb(240, 253, 255);
+      }
     </style>
   </head>
   <body>
@@ -216,8 +230,55 @@
 </div>
 <br>
  <div class="recruiters"> 
- <center><img src="recruiters image.png"></center>  
-</div>   
+ <center><img src="recruiters image.png" width = "1500"></center>  
+</div>  
+<br>
+
+<h1><center><font color = "blue">Why us?</font></center></h1> 
+<div class = "div_first">
+<h2><center>The Finest Minds</center></h2><br>
+<p><font size="4.5">The students at CCET Degree Wing are handpicked from among the brightest minds in the country
+   through Joint Entrance Examination (Main) conducted by CBSE. The strict selection criteria 
+   facilitate that only the best enter the hallowed portal. These students are the pearls which 
+   are found alter scaling the ocean of over many applicants. They are then trained and groomed
+    to meet the challenges of the profession.</font></p>
+</div>
+
+<div class = "div_second">
+<h2><center>Experienced Faculty</center></h2><br>
+<p><font size="4.5">All the departments have experienced faculty member for each subject to cater to 
+  the needs of the students for both theoretical inputs and practical applications. The faculty members,
+   with years of experience in grooming future engineers, always encourage students to raise their doubts
+    so that students can have a complete understanding of the subject. The students are encouraged to look
+     for avenues to learn from every opportunity and enhance their competencies.</font></p>
+</div>
+<div class = "div_first">
+  <h2><center>Panjab University, Chandigarh</center></h2><br>
+  <p><font size="4.5">The institution is affiliated to Panjab University, Chandigarh. Panjab University
+     and its affiliated colleges are presently ranked FIRST in India and in top 250 around the world according 
+     to the UK based Times Higher Education’s(THE) and Thomas Reuter’s World University Rankings Survey 2013-14.
+      The curriculum of BE has been designed (Panjab University) with such exhaustive deliberations and discussions
+       with the engineering experts and professionals so as to make the curriculum most closely aligned with the needs
+        and demands of the industry.</font></p>
+  </div>
+  <div class = "div_second">
+    <h2><center>Facilities for Recruiters</center></h2><br>
+    <p><font size="4.5"><pre>
+1. Well-Equipped GD rooms.
+2. Auditorium with capacity of 300 for
+   presentation.
+3. Facilities available for online test
+   (upto 100 students).
+4. Student volunteers for every possible
+   arrangements.
+5. Spacious Lecture Halls that can be used
+   all kind of purposes like waiting rooms,
+   etc.
+6. Well-Equipped Labs for all written as well
+   as online tests.
+    </pre></font></p>
+    </div>
+
  <footer>
       <div class="footer">
         <hr class="footer_rule" />
