--- a/CCET/index.html
+++ b/CCET/index.html
@@ -30,6 +30,14 @@
         from{background-color:rgb(0, 195, 255);}
         to{background-color:rgb(253, 255, 220);}
       }
+      @keyframes change_color_first{
+        from{background-color: rgb(230, 253, 231);}
+        to{background-color: aqua;}
+      }
+      @keyframes change_color_second{
+        from{background-color: rgb(223, 255, 196);}
+        to{background-color: rgb(135, 222, 174);}
+      }
       
       .div_info{
         
@@ -92,6 +100,10 @@
         height:400px;
         width:350px;
         background-color: aliceblue;
+        animation-name: change_color_first; 
+        animation-direction: alternate;
+        animation-duration: 6s; 
+        animation-iteration-count: infinite;
       }
       .div_second{
         float:left;
@@ -99,6 +111,10 @@
         height:400px;
         width:389px;
         background-color: rgb(240, 253, 255);
+        animation-name: change_color_second; 
+        animation-direction: alternate;
+        animation-duration: 6s; 
+        animation-iteration-count: infinite;
       }
     </style>
   </head>
@@ -234,7 +250,7 @@
 </div>  
 <br>
 
-<h1><center><font color = "blue">Why us?</font></center></h1> 
+<h1><center><font color = "blue">Why us?</font></center></h1><br> 
 <div class = "div_first">
 <h2><center>The Finest Minds</center></h2><br>
 <p><font size="4.5">The students at CCET Degree Wing are handpicked from among the brightest minds in the country
