--- a/PEC/index.html
+++ b/PEC/index.html
@@ -310,7 +310,7 @@ Here are some of the companies that wisited last year for placement.
              </div>
              <br><br><hr>
              <div class="past">
-                <h2 style=color:crimson style=font-style:italic > Some of our previous recruiters are:-</h2> <br>
+                <h2 > Some of our previous recruiters are:-</h2> <br>
                  <pre>
   ABB   |GEMINI   |NAVYUG   |ABSOLUT DATA   |GMR   |NBC BEARING   |ACC   |GODREJ   |NITCO   |ACCENTURE   |GOLDMAN SACHS   |NOMURA   |ACCOLITE <br> |GOOGLE   |NUCLEAR SOFTWARE   |ADA/DRDO   |GRAIL RESEARCH   | <br> OPEN SOLUTION   |ADOBE   |GREY B   |ORIENT   |AKASH INSTIUTE   |GWYNNIEBEE PANASONIC   |ALSTOM PROJECTS   |HAL   |PHILIPS   |AMADEUS   |HATCH   |POWER GRID`  <br> |AMAZON   |HAVELLS INDIA   |PRATAP UNIVERSITY  <br> |AMERICAN EXPRESS   |HCL INFOSYSTEMS   |PUNJLLOYD   |AMTEK   |HCL TECH   |QA INFOTECH   |ANSAL API   |HEADS STRONG   |
    RANCORE (RELIANCE INDUSTRIES LTD)   |ARICENT   |HERO HONDA   |RECKITT BENCKISER   |ARISTA NETWORK   |HERO MOTOCORP LTD.   |ROYAL ENFIELD   | <br> ASCENT MEDIA PTE LTD, SINGAPORE   |HINDUSTAN AERONAUTICS LTD (HAL) <br>  |S&P   |ASHOK LEYLAND   |HMEL   |SAB MILLER   |ATKINS   |
