--- a/PEC/index.html
+++ b/PEC/index.html
@@ -74,18 +74,18 @@ a:hover{
       <div class="centered">
        
         <h1><b><u>PUNJAB ENGINEERING COLLEGE</u></b></h1>
-  
+      
       <h4>CHANDIGARH</h4></div>
   
 <marquee>This is not the official webpage of PEC TNP.</marquee>
     <!--navigation-->
     <nav class="bar">
-      <a href="#">HOME</a>
-      <a href="#">PEC</a>
-      <a href="#">UIET</a>
-      <a href="#">CCET</a>
-      <a href="#">CHITKARA</a>
-      <a href="#">CU</a>
+      <a href="../Index.html">HOME</a>
+      <a href="../PEC/index.html">PEC</a>
+      <a href="../UIET/index.html">UIET</a>
+      <a href="../CCET/index.html">CCET</a>
+      <a href="../Chitkara/index.html">CHITKARA</a>
+      <a href="../CU/index.html">CU</a>
       <a href="#">ABOUT US</a>
   </nav>
     <div class="section1">
@@ -160,7 +160,7 @@ Here are some of the statistics and companies that visited int the last four yea
      <td>47</td>
      <td>15</td>
      <td>12</td>
-     <td><a href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202015-16_Web.pdf" target="_blank">2015- 2016 Placed Students</a></td>
+     <td><a  title="click for more info" href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202015-16_Web.pdf" target="_blank">2015- 2016 Placed Students</a></td>
      </tr>
      <tr height="36">
      <td height="108" rowspan="3" style="height:108px;">2016 - 2017</td>
@@ -200,7 +200,7 @@ Here are some of the statistics and companies that visited int the last four yea
      <td>51</td>
      <td>20</td>
      <td>15</td>
-     <td><a href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202016-17_Web.pdf" target="_blank">2016- 2017 Placed Students</a></td>
+     <td><a title="click for more info" href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202016-17_Web.pdf" target="_blank">2016- 2017 Placed Students</a></td>
      </tr>
      <tr height="36">
      <td height="108" rowspan="3" style="height:108px;">2017 - 2018</td>
@@ -240,7 +240,7 @@ Here are some of the statistics and companies that visited int the last four yea
      <td>57</td>
      <td>34</td>
      <td>22</td>
-     <td><a href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202017-18_Web.pdf" target="_blank">2017- 2018 Placed Students</a></td>
+     <td><a title="click for more info" href="http://pec.ac.in/sites/default/files/uploads/BE%20Placement%20Data%202017-18_Web.pdf" target="_blank">2017- 2018 Placed Students</a></td>
      </tr>
      </tbody>
      </table></div>
