--- a/UIET/index.html
+++ b/UIET/index.html
@@ -49,10 +49,13 @@
     </div>
 	
     <!--Content-->
+	<br>
 	<div>
 		<h1 class=Ani>Welcome to the training and placement site of University Institute Of Engineering and Technology</h1>
+		<br><br>
 		<img src="Assets/College_Logos/uiet.png" class="logos2" alt="error loading image" >
 	<div>
+	
     <div class=Intro>
 		<center>
 		The UNIVERSITY INSTITUTE OF ENGINEERING AND TECHNOLOGY, a department of PANJAB UNIVERSITY has prospered by leaps and bounds over the years achieving great academic heights besides foraying into the top 50 finest engineering colleges of the country. Having been taught by one of the best faculties of the region, the students of UIET have been empowered and groomed to take on the rigorous challenges in their upcoming lives. The sincere efforts made by our glorious alumni in the progress of the institute has further strengthened its fundamentals in a short span of time. The atmosphere of creativity and the enterprising attitude of the students has promoted a spirit of innovation. The recent achievements of the students in myriad fields including biotech, mechanical, electrical has set a new trend in the road to establishing a brand name for UIET. Apart from a healthy academic atmosphere and renowned faculty, the institute provides ample amount of exposure to the students to discover their abilities in the fields of arts, literature and music as it houses a range of literary and cultural committees which have become popular in as well as out of the institute.
@@ -89,7 +92,7 @@
 		<tr>
 			<td>Top Paying Recruiters</td>
 			<td>Google and Amazon</td>
-			<td>Google and Microsft</td>
+			<td>Google and Microsoft</td>
 		</tr>
 	</tbody>
 </table>
