--- a/Chitkara/index.html
+++ b/Chitkara/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>homepage</title>
+    <title>Chitkara</title>
   </head>
   <body>
     <!--this is header-->
@@ -25,12 +25,12 @@
     <!--navigation-->
 
     <div class="navbar">
-      <a href="#">HOME </a>
-      <a href="#">PEC</a>
-      <a href="#">UIET</a>
-      <a href="#">CCET</a>
-      <a href="#">CHITKARA</a>
-      <a href="#">CU</a>
+      <a href="../Index.html">HOME </a>
+      <a href="../PEC/index.html">PEC</a>
+      <a href="../UIET/index.html">UIET</a>
+      <a href="../CCET/index.html">CCET</a>
+      <a href="../Chitkara/index.html">CHITKARA</a>
+      <a href="../CU/index.html">CU</a>
       <a href="#">ABOUT US</a>
     </div>
     <!--content-->
