--- a/CU/index.html
+++ b/CU/index.html
@@ -19,7 +19,7 @@
         />
         <h1><b> TRAINING AND PLACEMENT CELL</b></h1>
         <br />
-        <h4>, CHANDIGARH UNIVERSITY, CHANDIGARH.</h4>
+        <h4>CHANDIGARH UNIVERSITY, MOHALI.</h4>
       </div>
     </header>
 
